--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
     <title>EduNow overflow </title>
   </head>
   <body ng-app="app">
-    <h1>index</h1>
-    <h3><a href="/#/new/">Ställ en fråga</a></h3>
-    <h3><a href="/#/">Visa alla frågor</a></h3>
+
+    <h3><a href="/#/new/">Ställ en fråga</a> | <a href="/#/">Visa alla frågor</a></h3>
       <div ng-controller="directoryController">
         <div ng-view>
 
