added logo shark, yay

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <body ng-app="app">
 
     <h3><a href="/#/new/">Ställ en fråga</a> | <a href="/#/">Visa alla frågor</a></h3>
+    <img class="guru_shark" src="../images/shark_01.png" />
       <div ng-controller="directoryController">
         <div ng-view>
 
